--- a/AnimateDiff.ipynb
+++ b/AnimateDiff.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPuHGCKiGHn5cgvDlM/G2x9",
+      "authorship_tag": "ABX9TyNoGV8pnSdrOTqbE4rg2wGd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,7 @@
         "[visitor-badge]: https://api.visitorbadge.io/api/visitors?path=Linaqruf-AnimateDiff&label=Visitors&labelColor=%2334495E&countColor=%231ABC9C&style=flat&labelStyle=none\n",
         "[visitor-stats]: https://visitorbadge.io/status?path=Linaqruf-AnimateDiff\n",
         "\n",
+        "\n",
         "<br>\n",
         "<table>\n",
         "    <tr>\n",
@@ -63,7 +64,12 @@
         "- [ ] Save new output to `temp_folder` as well for easier `display(img)`\n",
         "- [ ] Delete pipeline after each module used to clean memory\n",
         "- [ ] Support another scheduler (?) ~~DDIM bad~~\n",
-        "- [ ] Support external VAE"
+        "- [ ] Support external VAE\n",
+        "\n",
+        "UPDATE\n",
+        "- Init Image from [talesofai](https://github.com/talesofai/AnimateDiff/)'s fork is not actually working\n",
+        "- Colab free user can use this notebook but only limited to `512x512` as far i know, higher than that got OOM\n",
+        "- for `fp16` support use [dajes](https://github.com/dajes/AnimateDiff/tree/longer_videos)'s fork"
       ],
       "metadata": {
         "id": "qjYmm5Eh12AW"
@@ -265,7 +271,7 @@
         "os.chdir(root_dir)\n",
         "\n",
         "# @markdown ### **Download Stable Diffusion Model**\n",
-        "# @markdown Please specify whether your model is based on V1, V2, or V2 768.\n",
+        "\n",
         "MODEL_URL   = \"AnyLoRA Anime Mix\" #@param [\"PASTE MODEL URL OR GDRIVE PATH HERE\",  \"Anything V3.1\", \"AnyLoRA Default\", \"AnyLoRA Anime Mix\", \"ChilloutMix Ni\", \"Stable Diffusion V1.5\"] {allow-input: true}\n",
         "# @markdown ### **Download LoRA**\n",
         "# @markdown Specify `LORA_URL` to download LoRA. Leave it empty if you don't want to use it.\n",
@@ -531,7 +537,7 @@
         "id": "zHXDQOYdpkiO",
         "outputId": "efd51a67-c4d2-4f3d-b925-02fc4a9df598"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
