fix: clean libtcmalloc

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -81,7 +81,6 @@
         "dpmpp_2m_v2_patch   = True  # @param {type:'boolean'}\n",
         "# @markdown ### **Optimization Config**\n",
         "# @markdown > It's not recommended to set params below to `True` if you have **Colab Pro** subscription.\n",
-        "ram_alloc_patch     = True  # @param {type:'boolean'}\n",
         "colab_optimizations = True  # @param {type:'boolean'}\n",
         "# @markdown > Specify `mobile_optimizations` to keep colab tab alive for mobile users\n",
         "mobile_optimizations = False  # @param {type:'boolean'}\n",
@@ -198,14 +197,9 @@
         "        subprocess.run(['pip', 'install', '-q', f'xformers=={xformers_version}'], check=True)\n",
         "\n",
         "def install_dependencies():\n",
-        "    ubuntu_deps_url = \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/ubuntu-deps.zip\"\n",
-        "    ram_patch_url   = \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/ram_patch.zip\"\n",
-        "\n",
-        "    ubuntu_deps(ubuntu_deps_url, deps_dir, cprint(\"Installing ubuntu dependencies\", color=\"green\", tqdm_desc=True))\n",
-        "\n",
-        "    if ram_alloc_patch:\n",
-        "        subprocess.run([\"apt\", \"install\",  'libunwind8-dev', \"-y\"], check=True)\n",
-        "        ubuntu_deps(ram_patch_url, deps_dir, cprint(\"Installing RAM allocation patch\", color=\"green\", tqdm_desc=True))\n",
+        "    ubuntu_deps = [\"aria2\", \"lz4\", \"unionfs-fuse\"]\n",
+        "    cprint(\"Installing ubuntu dependencies\", color=\"green\")\n",
+        "    subprocess.run([\"apt\", \"install\"] + ubuntu_deps)\n",
         "\n",
         "def install_webui(repo_dir, desc):\n",
         "    try:\n",
@@ -304,10 +298,6 @@
         "        patch_repo(url=dpmpp_2m_v2_url, dir=patches_dir, cwd=repo_dir, whitespace_fix=True, quiet=True)\n",
         "        shutil.rmtree(patches_dir)\n",
         "        cprint(\" [-] DPM++ 2m V2 and DPM++ 2m Karras V2 patch done!\", color=\"green\")\n",
-        "\n",
-        "    if ram_alloc_patch:\n",
-        "        os.environ[\"LD_PRELOAD\"] = \"libtcmalloc.so\"\n",
-        "        cprint(\" [-] Camenduru's ram allocation patch done!\", color=\"green\")\n",
         "\n",
         "    if colab_optimizations:\n",
         "        lowram_patch_url = \"https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch\"\n",
@@ -1074,7 +1064,7 @@
         "\n",
         "os.chdir(output_dir)\n",
         "\n",
-        "use_drive = True  # @param {type:\"boolean\"}\n",
+        "use_drive = False  # @param {type:\"boolean\"}\n",
         "folder_name = \"cagliostro-colab-ui\"  # @param {type: \"string\"}\n",
         "filename = \"waifu.zip\"  # @param {type: \"string\"}\n",
         "save_as = filename\n",
