set `os.environ["TCMALLOC_AGGRESSIVE_DECOMMIT"] = "t"`

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -1036,6 +1036,7 @@
         "\n",
         "    cprint()\n",
         "    os.chdir(repo_dir)\n",
+        "    os.environ[\"TCMALLOC_AGGRESSIVE_DECOMMIT\"] = \"t\"\n",
         "    !{final_args}\n",
         "\n",
         "main()"
