--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -19,7 +19,7 @@
         "# **Cagliostro Colab UI**\n",
         "All-in-One, Customizable and Flexible Stable Diffusion for Google Colab.\n",
         "\n",
-        "**Version 3.0.0** | [Github][link-to-github] | [What's New?][README]\n",
+        "**Version 3.1.0** | [Github][link-to-github] | [What's New?][README]\n",
         "\n",
         "<!-- [visitor-badge]: https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui -->\n",
         "[visitor-badge]: https://api.visitorbadge.io/api/visitors?path=Cagliostro%20Colab%20UI&label=Visitors&labelColor=%2334495E&countColor=%231ABC9C&style=flat&labelStyle=none\n",
@@ -178,7 +178,7 @@
         "    major_minor       = \".\".join(version.split(\".\")[:2])\n",
         "    xformers_version  = \"0.0.20\"\n",
         "    python_path       = f\"/usr/local/lib/python{major_minor}/dist-packages/\"\n",
-        "    ffmpy_path        = os.path.join(python_path, \"ffmpy-0.3.0.dist-info\")\n",
+        "    ffmpy_path        = os.path.join(python_path, \"ffmpy-0.3.1.dist-info\")\n",
         "\n",
         "    for url in tqdm(urls, desc=desc):\n",
         "        filename  = py_utils.get_filename(url)\n",
@@ -198,8 +198,10 @@
         "\n",
         "def install_dependencies():\n",
         "    ubuntu_deps = [\"aria2\", \"lz4\", \"unionfs-fuse\"]\n",
+        "    python_deps = [\"ffmpy\"]\n",
         "    cprint(\"Installing ubuntu dependencies\", color=\"green\")\n",
         "    subprocess.run([\"apt\", \"install\"] + ubuntu_deps)\n",
+        "    subprocess.run([\"pip\", \"install\"] + python_deps)\n",
         "\n",
         "def install_webui(repo_dir, desc):\n",
         "    try:\n",
@@ -834,7 +836,7 @@
         "accelerator           = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-sdp-no-mem-attention', 'opt-split-attention']\n",
         "auto_select_model     = False # @param {type: 'boolean'}\n",
         "auto_select_vae       = True # @param {type: 'boolean'}\n",
-        "additional_arguments  = \"--lowram --theme dark --no-half-vae\" #@param {type: 'string'}\n",
+        "additional_arguments  = \"--lowram --theme dark --no-half-vae --medvram\" #@param {type: 'string'}\n",
         "\n",
         "# GRADIO AUTH\n",
         "user                  = \"cagliostro\"\n",
