--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -836,7 +836,7 @@
         "accelerator           = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-sdp-no-mem-attention', 'opt-split-attention']\n",
         "auto_select_model     = False # @param {type: 'boolean'}\n",
         "auto_select_vae       = True # @param {type: 'boolean'}\n",
-        "additional_arguments  = \"--lowram --theme dark --no-half-vae --medvram\" #@param {type: 'string'}\n",
+        "additional_arguments  = \"--lowram --theme dark --no-half-vae\" #@param {type: 'string'}\n",
         "\n",
         "# GRADIO AUTH\n",
         "user                  = \"cagliostro\"\n",
