--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -74,7 +74,7 @@
         "mount_drive         = False  # @param {type:'boolean'}\n",
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "# @markdown ### **Repo Config**\n",
-        "repo_type           = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-Dev\", \"Anapnoe\"]\n",
+        "repo_type           = \"Lobehub\" #@param [\"AUTOMATIC1111\", \"Lobehub\", \"Anapnoe\"]\n",
         "update_webui        = False  # @param {type:'boolean'}\n",
         "update_extensions   = True  # @param {type:'boolean'}\n",
         "commit_hash         = \"\"  # @param {type:'string'}\n",
@@ -135,12 +135,12 @@
         "repo_type_to_repo_name = {\n",
         "    \"anapnoe\"           : f\"anapnoe/{voldemort}-ux\",\n",
         "    \"automatic1111\"     : f\"AUTOMATIC1111/{voldemort}\",\n",
-        "    \"automatic1111-dev\" : f\"AUTOMATIC1111/{voldemort}\",\n",
+        "    \"lobehub\" : f\"AUTOMATIC1111/{voldemort}\",\n",
         "}\n",
         "\n",
         "branch_type_to_branch = {\n",
         "    \"automatic1111\"     : \"master\",\n",
-        "    \"automatic1111-dev\" : \"dev\"\n",
+        "    \"lobehub\" : \"dev\"\n",
         "}\n",
         "\n",
         "with capture.capture_output() as cap:\n",
