Revert to 2 weeks ago

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -19,7 +19,7 @@
         "# **Cagliostro Colab UI**\n",
         "All-in-One, Customizable and Flexible Stable Diffusion for Google Colab.\n",
         "\n",
-        "**Version 3.1.0** | [Github][link-to-github] | [What's New?][README]\n",
+        "**Version 3.0.0** | [Github][link-to-github] | [What's New?][README]\n",
         "\n",
         "<!-- [visitor-badge]: https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui -->\n",
         "[visitor-badge]: https://api.visitorbadge.io/api/visitors?path=Cagliostro%20Colab%20UI&label=Visitors&labelColor=%2334495E&countColor=%231ABC9C&style=flat&labelStyle=none\n",
@@ -74,9 +74,9 @@
         "mount_drive         = False  # @param {type:'boolean'}\n",
         "output_drive_folder = \"cagliostro-colab-ui/outputs\" #@param {type:'string'}\n",
         "# @markdown ### **Repo Config**\n",
-        "repo_type           = \"Lobehub\" #@param [\"AUTOMATIC1111\", \"Lobehub\", \"Anapnoe\"]\n",
+        "repo_type           = \"Anapnoe\" #@param [\"AUTOMATIC1111\", \"AUTOMATIC1111-Dev\", \"Anapnoe\"]\n",
         "update_webui        = False  # @param {type:'boolean'}\n",
-        "update_extensions   = True  # @param {type:'boolean'}\n",
+        "update_extensions   = False  # @param {type:'boolean'}\n",
         "commit_hash         = \"\"  # @param {type:'string'}\n",
         "dpmpp_2m_v2_patch   = True  # @param {type:'boolean'}\n",
         "# @markdown ### **Optimization Config**\n",
@@ -135,12 +135,12 @@
         "repo_type_to_repo_name = {\n",
         "    \"anapnoe\"           : f\"anapnoe/{voldemort}-ux\",\n",
         "    \"automatic1111\"     : f\"AUTOMATIC1111/{voldemort}\",\n",
-        "    \"lobehub\" : f\"AUTOMATIC1111/{voldemort}\",\n",
+        "    \"automatic1111-dev\" : f\"AUTOMATIC1111/{voldemort}\",\n",
         "}\n",
         "\n",
         "branch_type_to_branch = {\n",
         "    \"automatic1111\"     : \"master\",\n",
-        "    \"lobehub\" : \"dev\"\n",
+        "    \"automatic1111-dev\" : \"dev\"\n",
         "}\n",
         "\n",
         "with capture.capture_output() as cap:\n",
@@ -178,7 +178,7 @@
         "    major_minor       = \".\".join(version.split(\".\")[:2])\n",
         "    xformers_version  = \"0.0.20\"\n",
         "    python_path       = f\"/usr/local/lib/python{major_minor}/dist-packages/\"\n",
-        "    ffmpy_path        = os.path.join(python_path, \"ffmpy-0.3.1.dist-info\")\n",
+        "    ffmpy_path        = os.path.join(python_path, \"ffmpy-0.3.0.dist-info\")\n",
         "\n",
         "    for url in tqdm(urls, desc=desc):\n",
         "        filename  = py_utils.get_filename(url)\n",
@@ -198,10 +198,8 @@
         "\n",
         "def install_dependencies():\n",
         "    ubuntu_deps = [\"aria2\", \"lz4\", \"unionfs-fuse\"]\n",
-        "    python_deps = [\"ffmpy\"]\n",
         "    cprint(\"Installing ubuntu dependencies\", color=\"green\")\n",
         "    subprocess.run([\"apt\", \"install\"] + ubuntu_deps)\n",
-        "    subprocess.run([\"pip\", \"install\"] + python_deps)\n",
         "\n",
         "def install_webui(repo_dir, desc):\n",
         "    try:\n",
