--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -176,7 +176,6 @@
         "    gpu_info          = py_utils.get_gpu_info()\n",
         "    version           = py_utils.get_python_version().split()[0]\n",
         "    major_minor       = \".\".join(version.split(\".\")[:2])\n",
-        "    xformers_version  = \"0.0.20\"\n",
         "    python_path       = f\"/usr/local/lib/python{major_minor}/dist-packages/\"\n",
         "    ffmpy_path        = os.path.join(python_path, \"ffmpy-0.3.0.dist-info\")\n",
         "\n",
@@ -192,9 +191,7 @@
         "    if os.path.exists(ffmpy_path):\n",
         "        shutil.rmtree(ffmpy_path)\n",
         "\n",
-        "    if not 'T4' in gpu_info:\n",
-        "        subprocess.run(['pip', 'uninstall', '-y', 'xformers'], check=True)\n",
-        "        subprocess.run(['pip', 'install', '-q', f'xformers=={xformers_version}'], check=True)\n",
+        "    subprocess.run(['pip', 'uninstall', '-y', 'xformers'], check=True)\n",
         "\n",
         "def install_dependencies():\n",
         "    ubuntu_deps = [\"aria2\", \"lz4\", \"unionfs-fuse\"]\n",
@@ -831,7 +828,7 @@
         "use_presets           = True # @param {type: 'boolean'}\n",
         "# @markdown ### **Arguments**\n",
         "use_gradio_auth       = False # @param {type: 'boolean'}\n",
-        "accelerator           = \"xformers\" # @param ['xformers', 'opt-sdp-attention', 'opt-sdp-no-mem-attention', 'opt-split-attention']\n",
+        "accelerator           = \"opt-sdp-attention\" # @param ['xformers', 'opt-sdp-attention', 'opt-sdp-no-mem-attention', 'opt-split-attention']\n",
         "auto_select_model     = False # @param {type: 'boolean'}\n",
         "auto_select_vae       = True # @param {type: 'boolean'}\n",
         "additional_arguments  = \"--lowram --theme dark --no-half-vae\" #@param {type: 'string'}\n",
